--- a/index.html
+++ b/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <script src="https://kit.fontawesome.com/8241f508d6.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>Frontend Mentor | NFT preview card component</title>
 </head>
+
 <body>
+    <div id="container">
+        <div class="header">
+            <img class="image" src="/images/image-equilibrium.jpg" alt="Equilibrium>
+        </div>
+        <div class=" content ">
+            <h2 class="white ">Equilibrium #3429
+            </h2>
+            <p class="mid-p "> Our Equilibrium collection promotes balance and calm. </p>
+            <div class="bottom-p "> 
+                <div class="left "> <i class="fa-brands fa-ethereum "></i> 0.041 ETH
+                </div> 
+                <div class="right "> <i class="fa-solid fa-clock "></i> 3 days left 
+                </div>
+            </div>
+            <hr>
+            <div class="foot " >
+                <div class="prof-pic "> <img class="prof " src="/images/image-avatar.png "  alt="profile-picture ">
+                </div>
+                <div class="prof-text "> Creation of <span class="creator white "> Jules Wyvern</span> </div>
+            </div>
+        </div>
+    </div>
 
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <!-- <div class="attribution ">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge " target="_blank ">Frontend Mentor</a>. Coded by <a href="# ">Your Name Here</a>.
+    </div> -->
 </body>
+
 </html>
