--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
         </div>
     </div>
 
-    <!-- <div class="attribution ">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge " target="_blank ">Frontend Mentor</a>. Coded by <a href="# ">Your Name Here</a>.
-    </div> -->
+   <div class="attribution ">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge " target="_blank ">Frontend Mentor</a href=" " target="_black ">. Coded by <a href="https://www.linkedin.com/in/chadi-captan-bb6a36240/ ">Chadi Captan  </a> /
+    <a target="_blank " href="https://www.frontendmentor.io/profile/ArcaniDFG/ ">ArcaniDFG</a>.
+    </div>
 </body>
 
 </html>
