--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div id="container">
         <div class="header">
-            <img class="image" src="/images/image-equilibrium.jpg" alt="Equilibrium">
+            <img class="image" src="images/image-equilibrium.jpg" alt="Equilibrium">
         </div>
         <div class=" content ">
             <h2 class="white ">Equilibrium #3429
@@ -30,7 +30,7 @@
             </div>
             <hr>
             <div class="foot ">
-                <div class="prof-pic "> <img class="prof " src="/images/image-avatar.png " alt="profile-picture ">
+                <div class="prof-pic "> <img class="prof " src="images/image-avatar.png " alt="profile-picture ">
                 </div>
                 <div class="prof-text "> Creation of <span class="creator white "> Jules Wyvern</span> </div>
             </div>
