--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <script src="https://kit.fontawesome.com/8241f508d6.js" crossorigin="anonymous"></script>
@@ -14,33 +14,36 @@
 </head>
 
 <body>
-    <div id="container">
-        <div class="header">
-            <img class="image" src="images/image-equilibrium.jpg" alt="Equilibrium">
-        </div>
-        <div class=" content ">
-            <h2 class="white ">Equilibrium #3429
-            </h2>
-            <p class="mid-p "> Our Equilibrium collection promotes balance and calm. </p>
-            <div class="bottom-p ">
-                <div class="left "> <i class="fa-brands fa-ethereum "></i> 0.041 ETH
+    <main>
+        <div id="container">
+            <div class="header">
+                <img class="image" src="images/image-equilibrium.jpg" alt="Equilibrium">
+            </div>
+            <div class=" content ">
+                <h2 class="white ">Equilibrium #3429
+                </h2>
+                <p class="mid-p "> Our Equilibrium collection promotes balance and calm. </p>
+                <div class="bottom-p ">
+                    <div class="left "> <i class="fa-brands fa-ethereum "></i> 0.041 ETH
+                    </div>
+                    <div class="right "> <i class="fa-solid fa-clock "></i> 3 days left
+                    </div>
                 </div>
-                <div class="right "> <i class="fa-solid fa-clock "></i> 3 days left
+                <hr>
+                <div class="foot ">
+                    <div class="prof-pic "> <img class="prof " src="images/image-avatar.png " alt="profile-picture ">
+                    </div>
+                    <div class="prof-text "> Creation of <span class="creator white "> Jules Wyvern</span> </div>
                 </div>
             </div>
-            <hr>
-            <div class="foot ">
-                <div class="prof-pic "> <img class="prof " src="images/image-avatar.png " alt="profile-picture ">
-                </div>
-                <div class="prof-text "> Creation of <span class="creator white "> Jules Wyvern</span> </div>
-            </div>
         </div>
-    </div>
-
-    <div class="attribution ">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge " target="_blank ">Frontend Mentor</a href=" " target="_black ">. Coded by <a href="https://www.linkedin.com/in/chadi-captan-bb6a36240/ ">Chadi Captan  </a> /
-        <a target="_blank " href="https://www.frontendmentor.io/profile/ArcaniDFG/ ">ArcaniDFG</a>.
-    </div>
+    </main>
+    <footer>
+        <div class="attribution ">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge " target="_blank ">Frontend Mentor</a href=" " target="_black ">. Coded by <a href="https://www.linkedin.com/in/chadi-captan-bb6a36240/ ">Chadi Captan  </a> /
+            <a target="_blank " href="https://www.frontendmentor.io/profile/ArcaniDFG/ ">ArcaniDFG</a>.
+        </div>
+    </footer>
 </body>
 
 </html>
