--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <script src="https://kit.fontawesome.com/8241f508d6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- displays site properly based on user's device -->
-
+    <script src="https://kit.fontawesome.com/8241f508d6.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
     <title>Frontend Mentor | NFT preview card component</title>
 </head>
 
@@ -20,8 +17,8 @@
                 <img class="image" src="images/image-equilibrium.jpg" alt="Equilibrium">
             </div>
             <div class=" content ">
-                <h2 class="white ">Equilibrium #3429
-                </h2>
+                <h1 class="white ">Equilibrium #3429
+                </h1>
                 <p class="mid-p "> Our Equilibrium collection promotes balance and calm. </p>
                 <div class="bottom-p ">
                     <div class="left "> <i class="fa-brands fa-ethereum "></i> 0.041 ETH
@@ -40,8 +37,8 @@
     </main>
     <footer>
         <div class="attribution ">
-            Challenge by <a href="https://www.frontendmentor.io?ref=challenge " target="_blank ">Frontend Mentor</a href=" " target="_black ">. Coded by <a href="https://www.linkedin.com/in/chadi-captan-bb6a36240/ ">Chadi Captan  </a> /
-            <a target="_blank " href="https://www.frontendmentor.io/profile/ArcaniDFG/ ">ArcaniDFG</a>.
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge ">Frontend Mentor</a>. Coded by <a href="https://www.linkedin.com/in/chadi-captan-bb6a36240/ ">Chadi Captan  </a> /
+            <a href="https://www.frontendmentor.io/profile/ArcaniDFG/ ">ArcaniDFG</a>.
         </div>
     </footer>
 </body>
